--- a/epic.css
+++ b/epic.css
@@ -166,14 +166,34 @@ html, body {
 	/*display: block;*/
 	position: relative;
 }
-.game .player {
-
+.game .endmessage {
+	position: absolute;
+	z-index: 990;
+	width: 80%;
+	padding: 1em 10%;
+	font-size: 3em;
+	top: 30%;
+	opacity: 0.01;
+	background: #E30613;
+	color: white;
+	-o-transition: top 0.5s ease-in, opacity 0.5s ease-out;
+	-ms-transition: top 0.5s ease-in, opacity 0.5s ease-out;
+	-moz-transition: top 0.5s ease-in, opacity 0.5s ease-out;
+	-webkit-transition: top 0.5s ease-in, opacity 0.5s ease-out;
+	transition: top 0.5s ease-in, opacity 0.5s ease-out;
 }
 .game #me {
 	z-index: 980;
 }
 .game #it {
 	z-index: 970;
+}
+.game .player {
+	-o-transition: top 0.1s ease-out, left 0.1s ease-out;
+	-ms-transition: top 0.1s ease-out, left 0.1s ease-out;
+	-moz-transition: top 0.1s ease-out, left 0.1s ease-out;
+	-webkit-transition: top 0.1s ease-out, left 0.1s ease-out;
+	transition: top 0.1s ease-out, left 0.1s ease-out;
 }
 .game .player,
 .game .monster,
@@ -183,13 +203,57 @@ html, body {
 	background-repeat: no-repeat;
 	top: 0;
 	left: 0;
-	-o-transition: top 0.1s ease-out, left 0.1s ease-out;
-	-ms-transition: top 0.1s ease-out, left 0.1s ease-out;
-	-moz-transition: top 0.1s ease-out, left 0.1s ease-out;
-	-webkit-transition: top 0.1s ease-out, left 0.1s ease-out;
-	transition: top 0.1s ease-out, left 0.1s ease-out;
 	background: url('images/se_spritesheet.svg');	
 	width: 20%;
+	opacity: 1;
+}
+.game .bomb {
+	-o-transition: opacity 0.1s ease-out;
+	-ms-transition: opacity 0.1s ease-out;
+	-moz-transition: opacity 0.1s ease-out;
+	-webkit-transition: opacity 0.1s ease-out;
+	transition: opacity 0.1s ease-out;
+	-o-animation-name: pulse;
+	-ms-animation-name: pulse;
+	-moz-animation-name: pulse;
+	-webkit-animation-name: pulse;
+	animation-name: pulse;
+	-o-animation-direction: reverse;
+	-ms-animation-direction: alternate-reverse;
+	-moz-animation-direction: alternate-reverse;
+	-webkit-animation-direction: alternate-reverse;
+	animation-direction: alternate-reverse;
+	-o-animation-iteration-count: infinite;
+	-ms-animation-iteration-count: infinite;
+	-moz-animation-iteration-count: infinite;
+	-webkit-animation-iteration-count: infinite;
+	animation-iteration-count: infinite;
+}
+.slow {
+	-o-animation-duration: 0.3s;
+	-ms-animation-duration: 0.3s;
+	-moz-animation-duration: 0.3s;
+	-webkit-animation-duration: 0.3s;
+	animation-duration: 0.3s;
+}
+.fast {
+	-o-animation-duration: 0.1s;
+	-ms-animation-duration: 0.1s;
+	-moz-animation-duration: 0.1s;
+	-webkit-animation-duration: 0.1s;
+	animation-duration: 0.1s;
+}
+@-moz-keyframes pulse {
+	0% { opacity: 1; }
+	100% { opacity: 0.3; }
+}
+@-webkit-keyframes pulse {
+	0% { opacity: 1; }
+	100% { opacity: 0.3; }
+}
+@keyframes pulse {
+	0% { opacity: 1; }
+	100% { opacity: 0.3; }
 }
 
 
